<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ikbal_jimmy.shareservices.AddServiceActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"

            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textaddservice"
            android:textColor="#008080"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add_service"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1" />

            <EditText
                android:id="@+id/Adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Adress"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1" />
            <EditText
                android:id="@+id/catergory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Adress"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1" />

            <EditText
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/City"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/Atitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Atitude"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/longituge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/longituge"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonPublish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonAjouterService"
            android:textColor="@android:color/white"
            android:background="#008080"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
