<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_fname" />

                <EditText
                    android:id="@+id/editFname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_lname" />

                <EditText
                    android:id="@+id/editLname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_email" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:enabled="false"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_password" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_hint_phone" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Update"
                android:background="@drawable/xml_btn_blue"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Address" />

                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/PROMO_CODE" />

                <TextView
                    android:id="@+id/textPromo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
