<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"

            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/textView1"
            android:textColor="#008080"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mon Profile"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/editFname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/text_hint_fname"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/editLname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/text_hint_lname"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1" />

            <TextView
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />


            <TextView
                android:id="@+id/editPseudo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:ems="10"
                android:hint="@string/pseudo"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="@android:color/white"
        android:background="#008080"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3" />


</RelativeLayout>