<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.servproapp.ChooseTime" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:layout_alignParentTop="true" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/xml_box_shadow_bottom"
             >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChooseTimeNote"
                android:layout_marginBottom="15dp" />

        <LinearLayout
            android:id="@+id/viewMorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/afternoon" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/choose_after_noon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5"
            android:orientation="vertical" >
        </LinearLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <LinearLayout
            android:id="@+id/viewAfternoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/morning" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/choose_morning_time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#e5e5e5"
            android:orientation="vertical" >
        </LinearLayout>

        <ListView
            android:id="@+id/listView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <LinearLayout
            android:id="@+id/viewAnyTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/time" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/choose_comfort" />

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>
